[gd_scene load_steps=2 format=3 uid="uid://7yulpyrirbfd"]

[ext_resource type="Script" path="res://addons/EventEditor/eventEditor.gd" id="1_mdwsq"]

[node name="EventEditor" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
script = ExtResource("1_mdwsq")

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
